# oauth2-passkey

./: .env_test  .gitignore  .windsurfrules  CHANGELOG.md  CHECKLIST_oauth2_passkey.md  CHECKLIST_oauth2_passkey_axum.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISH_CHECKLIST_Version2.md  Readme.md  SESSION.md  STORAGE_CLEANUP_COMPLETION.md  TestStrategy.md  ToDo.md  clear_db_cache.sh  demo  demo-oauth2  demo-passkey  dot.env.example  dot.env.oauth2.example  git-diff-cached  liboauth2  libpasskey  libsession  libuserdb  memo  monitor_db.sh  passkey_types.md  prep_dot_sqlx.sh  test.result
db/: Readme.md
demo-both/: Cargo.toml  README.md  dot.env.simple
demo-both/src/: main.rs  server.rs
demo-both/templates/: index.j2  p5.j2  p6.j2
demo-integration/: Cargo.toml
demo-integration/src/: handlers.rs  main.rs
demo-integration/src/oauth2/: handlers.rs
demo-integration/src/passkey/: handlers.rs  routes.rs
demo-integration/src/session/: extractor.rs  mod.rs
demo-integration/static/: conditional_ui.js  passkey.js
demo-integration/templates/: base.html  conditional_ui.j2  index.html  index.j2  index_anon.j2  index_user.j2  oauth2_js.j2  p1.j2  p2.j2  popup_close.j2  protected.j2
demo-oauth2/: Cargo.toml  README.md
demo-oauth2/self_signed_certs/: cert.pem  key.pem
demo-oauth2/src/: handlers.rs  main.rs  server.rs
demo-oauth2/templates/: index_anon.j2  index_user.j2  protected.j2
demo-passkey/: Cargo.toml  README.md
demo-passkey/self_signed_certs/: cert.pem  gen_certs.sh  key.pem
demo-passkey/src/: main.rs  routes.rs
demo-passkey/templates/: base.html  index.html  index.j2  index_anon.j2  index_user.j2
demo01/: Cargo.toml
demo01/src/: main.rs  protected.rs
demo01/templates/: p3.j2  p4.j2  p5.j2  p6.j2
libauth/: Cargo.toml
libauth/src/: context_token.rs  errors.rs  lib.rs  oauth2_coordinator.rs  oauth2_flow.rs  passkey_coordinator.rs  passkey_flow.rs  user_flow.rs
libaxum/: Cargo.toml
libaxum/src/: lib.rs  middleware.rs  oauth2.rs  passkey.rs  router.rs
libaxum/src/oauth2/: handlers.rs  mod.rs
libaxum/src/passkey/: handlers.rs  mod.rs  routes.rs
libaxum/src/session/: extractor.rs
libaxum/src/summary/: handlers.rs  templates.rs
libaxum/static/: oauth2.js  passkey.js
libaxum/templates/: conditional_ui.j2  index.j2  oauth2_accounts.j2  passkey_credentials.j2  popup_close.j2  user_summary.j2
liboauth2/: Cargo.toml
liboauth2/src/: client.rs  common.rs  errors.rs  lib.rs  types.rs
liboauth2/src/axum/: handlers.rs
liboauth2/src/oauth2/: core.rs  google.rs  idtoken.rs  mod.rs  utils.rs
liboauth2/src/storage/: oauth2_store.rs  traits.rs
liboauth2/templates/: popup_close.j2
libpasskey/: Cargo.toml
libpasskey/src/: common.rs  config.rs  errors.rs  lib.rs  types.rs
libpasskey/src/axum/: handlers.rs  routes.rs
libpasskey/src/passkey/: attestation.rs  auth.rs  challenge.rs  mod.rs  register.rs  related_origin.rs  types.rs
libpasskey/src/storage/: generic_data_store.rs  memory.rs  mod.rs  passkey_store.rs  postgres.rs  redis.rs  sqlite.rs  traits.rs  types.rs
libpasskey/templates/: base.html
libsession/: Cargo.toml
libsession/src/: common.rs  config.rs  lib.rs  types.rs
libsession/src/axum/: extractor.rs
libsession/src/session/: core.rs  mod.rs
libsession/src/storage/: memory.rs  redis.rs
libstorage/: Cargo.toml
libstorage/docs/: DATA_STORE.md
libstorage/examples/: store_usage.rs
libstorage/src/: config.rs  error.rs  errors.rs  lib.rs  types.rs
libstorage/src/cache/: config.rs  memory.rs  mod.rs  redis.rs  traits.rs  types.rs
libstorage/src/data/: mod.rs
libstorage/src/store/: memory.rs  mod.rs  postgres.rs  redis.rs  sqlite.rs  traits.rs
libuserdb/: Cargo.toml
libuserdb/src/: config.rs  errors.rs  lib.rs  types.rs
libuserdb/src/storage/: memory.rs
libuserdb/src/user/: core.rs
oauth2_passkey/: Cargo.toml  README.md  test.db
oauth2_passkey/src/: config.rs  lib.rs  test_utils.rs  utils.rs
oauth2_passkey/src/coordinate/: errors.rs  mod.rs  oauth2_flow.rs  passkey_flow.rs  user_flow.rs
oauth2_passkey/src/coordination/: admin.rs  auth_helpers.rs  authorization_security_tests.rs  errors.rs  mod.rs  oauth2.rs  passkey.rs  user.rs
oauth2_passkey/src/oauth2/: common.rs  config.rs  discovery.rs  errors.rs  mod.rs  types.rs
oauth2_passkey/src/passkey/: common.rs  config.rs  errors.rs  mod.rs  types.rs
oauth2_passkey/src/session/: common.rs  config.rs  errors.rs  mod.rs  types.rs
oauth2_passkey/src/storage/: cache_operations.rs  config.rs  errors.rs  injection_security_tests.rs  integration_tests.rs  mod.rs  schema_validation.rs  types.rs
oauth2_passkey/src/userdb/: errors.rs  mod.rs  types.rs
oauth2_passkey/tests/: integration.rs  integration_tests.rs
oauth2_passkey/tests-security/: README.md  cross_flow_security.rs  information_disclosure_security.rs  lib.rs  oauth2_security.rs  oauth2_security_clean.rs  oauth2_security_original.rs  passkey_security.rs  rate_limiting_security.rs  session_security.rs
oauth2_passkey/tests-security/common/: attack_scenarios.rs  mod.rs  security_utils.rs
oauth2_passkey/tests/common/: axum_mock_server.rs  constants.rs  fixtures.rs  mock_browser.rs  mock_browser_nonce.rs  mod.rs  nonce_aware_mock.rs  secure_auth.rs  session_utils.rs  test_server.rs  test_setup.rs  validation_utils.rs  webauthn_helpers.rs
oauth2_passkey/tests/integration/: api_client_flows.rs  combined_flows.rs  enhanced_nonce_tests.rs  mod.rs  nonce_verification_tests.rs  oauth2_flows.rs  oidc_discovery_test.rs  passkey_flows.rs  (+1 more)
oauth2_passkey_axum/: Cargo.toml  README.md  my_list_of_all_functions.txt
oauth2_passkey_axum/src/: config.rs  default_pages.rs  error.rs  lib.rs  middleware.rs  oauth2.rs  passkey.rs  router.rs  session.rs  static_files.rs  test_utils.rs  user.rs
oauth2_passkey_axum/static/: admin_summary.js  admin_user.js  conditional_ui.js  oauth2.js  passkey.js  summary.css  summary.js
oauth2_passkey_axum/templates/: admin_user.j2  admin_user_list.j2  conditional_ui.j2  login.j2  popup_close.j2  summary.j2  user_summary.j2
(+206 files in other folders)
