[workspace]
members = [
    "demo01",
    "demo-oauth2",
    "demo-passkey",
    "oauth2_passkey_axum",
    "oauth2_passkey",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
oauth2-passkey-axum = { path = "./oauth2_passkey_axum" }
oauth2-passkey = { path = "./oauth2_passkey" }

async-trait = "0.1.88"
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
dotenv = "0.15.0"

http = "1.3.1"
headers = "0.4.1"

tokio = { version = "1.45", features = ["bytes", "fs", "io-std", "macros", "parking_lot", "rt-multi-thread", "signal-hook-registry", "socket2", "sync", "time", "tracing"] }
rustls = { version = "0.23.28", features = ["ring"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"

tracing = "0.1.41"
thiserror = "2.0.12"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17", features = ["v4"] }
urlencoding = "2.1.3"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "uuid"] }
