[workspace]
members = [
    "demo-both",
    "demo-oauth2",
    "demo-passkey",
    "oauth2_passkey_axum",
    "oauth2_passkey",
]

resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
# For development: use local paths
oauth2-passkey-axum = { path = "./oauth2_passkey_axum" }
oauth2-passkey = { path = "./oauth2_passkey" }

# For publishing: uncomment these and comment out the path versions above
#oauth2-passkey-axum = "0.1"
#oauth2-passkey = "0.1"

async-trait = "0.1.88"
axum = { version = "0.8", default-features = false }
dotenvy = "0.15.7"
http = { version = "1.3.1", default-features = false }
headers = "0.4.1"
tokio = "1.45"
rustls = { version = "0.23.28", features = ["ring"], default-features = false }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", default-features = false }
chrono = { version = "0.4.41", default-features = false }
chrono-tz = { version = "0.10.3", default-features = false }
tracing = { version = "0.1.41", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
serde_json = "1.0.140"
serde = { version = "1.0.219", default-features = false }
uuid = { version = "1.17", default-features = false }
urlencoding = "2.1.3"

sqlx = { version = "0.8", default-features = false }

# Cargo-release configuration for sequential publishing
[workspace.metadata.release]
# Shared configuration for all crates
sign-commit = false
sign-tag = false
push = false
publish = false  # We'll control publishing manually or per-crate
tag = false  # Don't tag at workspace level

# Define publishing order: oauth2-passkey first, then oauth2-passkey-axum
[[workspace.metadata.release.dependencies]]
name = "oauth2-passkey"
version = "workspace"

[[workspace.metadata.release.dependencies]]
name = "oauth2-passkey-axum"
version = "workspace"
depends = ["oauth2-passkey"]
