[workspace]
members = [
    "demo-both",
    "demo-oauth2",
    "demo-passkey",
    "oauth2_passkey_axum",
    "oauth2_passkey",
]

resolver = "2"

[workspace.package]
version = "0.1.4-dev"
edition = "2024"

[workspace.dependencies]
# Common packages
askama = { version = "0.14.0" }
async-trait = "0.1.88"
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
headers = "0.4.1"
http = "1.3.1"
rustls = { version = "0.23.29", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "chrono",
    "json",
    "uuid",
] }
subtle = "2.6"
thiserror = "2.0.12"
tokio = { version = "1.47", features = [
    "bytes",
    "fs",
    "io-std",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal-hook-registry",
    "socket2",
    "sync",
    "time",
    "tracing",
] }
tracing = "0.1.41"
urlencoding = "2.1.3"
uuid = { version = "1.17", features = ["v4"] }

### For oauth2_passkey_axum

### For oauth2_passkey
base64 = "0.22.1"
ciborium = { version = "0.2.2", features = ["std"] }
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
oid-registry = "0.8.1"
proptest = "1.7.0"
redis = { version = "0.32.4", features = ["tokio-comp"] }
reqwest = { version = "0.12.22", features = ["json", "cookies"] }
ring = { version = "0.17.14", features = ["std"] }
serial_test = "3.2.0"
sha2 = "0.10.9"
url = "2.5.4"
webpki = { version = "0.22.4", features = ["std"] }
x509-parser = { version = "0.17.0", features = ["validate", "verify"] }

# Note: httpmock removed - using Axum mock server instead

### For demo-apps
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

### Test dependencies
regex = "1.11"
