[package]
name = "demo-both"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.14.0" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenvy = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }

#oauth2-passkey-axum = { workspace = true }
oauth2-passkey-axum = "0.1"

subtle = "2.6"
serde = { version = "1.0", features = ["derive"] }
