[package]
name = "demo-both"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
oauth2-passkey-axum = { path = "../oauth2_passkey_axum" }
#oauth2-passkey-axum = "0.1"

askama = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
dotenvy = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
