[package]
name = "demo-integration"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
dotenv = "0.15.0"
http = "1.2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

liboauth2 = { workspace = true }
libsession = { workspace = true }
libpasskey = { workspace = true }
libuserdb = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }
axum-core.workspace = true
axum-extra = { workspace = true }
chrono = { workspace = true }
serde_json = "1.0.138"
