[package]
name = "demo-oauth2"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenv = { workspace = true }
http = { workspace = true }
tokio = { version = "1.44.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = { workspace = true }

libaxum = { workspace = true }
liboauth2 = { workspace = true }
libsession = { workspace = true }
