[package]
name = "demo-oauth2"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.14.0" }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenv = { workspace = true }
http = { workspace = true }
tokio = { version = "1.45.1", features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = { workspace = true }

# oauth2_passkey_axum = { workspace = true }
oauth2-passkey-axum = { path = "../oauth2_passkey_axum", default-features = false, features = [] }
