[package]
name = "demo-oauth2"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.14.0", default-features = false }
axum = { version = "0.8", default-features = false }
axum-server = "0.7.2"
dotenvy = { workspace = true }
http = { workspace = true }
tokio = "1.45.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }
rustls = { workspace = true }

# oauth2_passkey_axum = { workspace = true }
#oauth2-passkey-axum = { path = "../oauth2_passkey_axum", default-features = false, features = [] }

oauth2-passkey-axum = { version = "0.1", default-features = false, features = [] }
