[package]
name = "demo-passkey"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = "0.13.0"
axum = { workspace = true }
axum-core = { workspace = true }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rustls = { workspace = true }
dotenv = { workspace = true }
http = { workspace = true }

oauth2_passkey_axum = { path = "../oauth2_passkey_axum", default-features = false, features = [] }
#oauth2_passkey_axum = { workspace = true }
