[package]
name = "demo-passkey"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.14.0", default-features = false }
axum = { workspace = true }
axum-core = { workspace = true }
axum-server = "0.7.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt"] }
rustls = { workspace = true }
dotenvy = { workspace = true }
http = { workspace = true }

#oauth2-passkey-axum = { path = "../oauth2_passkey_axum", default-features = false, features = [] }
#oauth2_passkey_axum = { workspace = true }

oauth2-passkey-axum = { version = "0.1", default-features = false, features = [] }
