[package]
name = "demo-passkey"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
oauth2-passkey-axum = { path = "../oauth2_passkey_axum", default-features = false, features = [] }
#oauth2-passkey-axum = { version = "0.1", default-features = false, features = [] }

askama = { workspace = true }
axum = { workspace = true }
axum-core = { workspace = true }
axum-server = { workspace = true }
dotenvy = { workspace = true }
http = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
