[package]
name = "demo01"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.13.0" }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
dotenv = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
axum = { workspace = true }
tokio = { workspace = true }
rustls = { workspace = true }

oauth2-passkey-axum = { workspace = true }
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
