[package]
name = "libauth"
version = { workspace = true }
edition = { workspace = true }
description = "Authentication coordination library for axum-oauth2-passkey"
license = "MIT"
authors = ["Kei Takahashi <kei.takahashi@gmail.com>"]

[dependencies]
liboauth2 = { path = "../liboauth2" }
libpasskey = { path = "../libpasskey" }
libuserdb = { path = "../libuserdb" }
libstorage = { path = "../libstorage" }
libsession = { path = "../libsession" }

base64 = "0.21"
chrono.workspace = true
headers.workspace = true
hex = "0.4.3"
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
