[package]
name = "libauth"
version = { workspace = true }
edition = { workspace = true }
description = "Authentication coordination library for axum-oauth2-passkey"
license = "MIT"
authors = ["Kei Takahashi <kei.takahashi@gmail.com>"]

[dependencies]
liboauth2 = { path = "../liboauth2" }
libpasskey = { path = "../libpasskey" }
libuserdb = { path = "../libuserdb" }
libsession = { path = "../libsession" }
chrono.workspace = true
headers.workspace = true
http.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
