[package]
name = "libaxum"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
askama = { version = "0.12.1", features = ["serde-json"] }
http = "1.2.0"

liboauth2 = { workspace = true }
libsession = { workspace = true }
libpasskey = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
serde_json = "1.0.139"
