[package]
name = "liboauth2"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.96"
redis = { version = "0.29.0", features = ["tokio-comp"] }
dashmap = "6.1.0"
http = "1.2.0"
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.20.3"
pkcs1 = "0.7.5"
reqwest = { version = "0.12.12", features = ["json"] }
rsa = "0.9.7"
serde = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { workspace = true }
url = "2.5.4"
dotenv = "0.15.0"
ring = "0.17.11"
async-trait = "0.1.86"
headers = "0.4.0"
sha2 = "0.10.8"
base64 = "0.22.1"
tracing = "0.1.41"

libsession = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }

[package.metadata.askama]
dir = "templates"
