[package]
name = "liboauth2"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
dashmap = "6.1.0"
http = { workspace = true }
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.21.1"
pkcs1 = "0.7.5"
reqwest = { version = "0.12.15", features = ["json"] }
rsa = "0.9.8"
url = "2.5.4"
ring = { workspace = true }
headers = { workspace = true }
sha2 = "0.10.8"
base64 = { workspace = true }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace =true }

libsession = { workspace = true }
libstorage = { workspace = true }
# libuserdb = { workspace = true }

[package.metadata.askama]
dir = "templates"
