[package]
name = "libpasskey"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = "0.1"
base64 = "0.22.1"
ciborium = "0.2.2"
dotenv = "0.15.0"
oid-registry = "0.8.1"
redis = { version = "0.29.0", features = ["tokio-comp"] }
ring = { version = "0.17.11", features = ["std"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8", features = [
    "any",
    "chrono", 
    "json", 
    "macros",
    "mysql", 
    "postgres", 
    "regexp", 
    "runtime-tokio-native-tls", 
    "runtime-tokio-rustls", 
    "sqlite",
    "runtime-async-std-native-tls"
], default-features = false }
thiserror = "2.0.11"
tokio = { workspace = true }
webpki = { version = "0.22.4", features = ["std"] }
x509-parser = { version = "0.17.0", features = ["validate", "verify"] }
tracing = "0.1.41"

libsession = { workspace = true }
libstorage = { workspace = true }
