[package]
name = "libsession"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
http = "1.2.0"
serde = "1.0.218"
serde_json = "1.0.140"
ring = "0.17.11"
headers = "0.4.0"
base64 = "0.22.1"
thiserror = "2.0.12"
libuserdb = { workspace = true }
libstorage = { workspace = true }
