[package]
name = "libsession"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
http = { workspace = true }
ring = { workspace = true }
headers = { workspace = true }
base64 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

libuserdb = { workspace = true }
libstorage = { workspace = true }
tracing.workspace = true
