[package]
name = "libsession"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
http = { workspace = true }
ring = { workspace = true }
headers = { workspace = true }
base64 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

libuserdb = { workspace = true }
libstorage = { workspace = true }
tracing.workspace = true
