[package]
name = "libstorage"
version = "0.1.0"
edition = "2021"
description = "A storage abstraction library supporting various backends"
license = "MIT"

[features]
default = ["sqlx"]
sqlx = ["sqlx/runtime-tokio-native-tls", "sqlx/sqlite", "sqlx/postgres", "sqlx/chrono"]

[dependencies]
async-trait = "0.1"
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", optional = true }
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["full", "test-util"] }
