[package]
name = "libstorage"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = "0.1"
dotenv = "0.15.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { workspace = true }
tracing = "0.1.41"
sqlx = { version = "0.8", features = [
    "any",
    "chrono", 
    "json", 
    "macros",
    "mysql", 
    "postgres", 
    "regexp", 
    "runtime-tokio", 
    "runtime-tokio-native-tls", 
    "runtime-tokio-rustls", 
    "sqlite",
    "runtime-async-std-native-tls"
], default-features = false }

libsession = { workspace = true }
