[package]
name = "libstorage"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
redis = { version = "0.29.1", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

# sqlx = { version = "0.8", features = [
#     "any",
#     "chrono",
#     "json",
#     "macros",
#     "mysql",
#     "postgres",
#     "regexp",
#     "runtime-tokio",
#     "runtime-tokio-native-tls",
#     "runtime-tokio-rustls",
#     "sqlite",
#     "runtime-async-std-native-tls"
# ], default-features = false }
