[package]
name = "libuserdb"
version = { workspace = true }
edition = { workspace = true }
description = "User data management library for OAuth2 applications"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dotenv = { workspace = true }
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.43", features = ["sync"] }
uuid = { version = "1.15", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
