[package]
name = "libuserdb"
version = { workspace = true }
edition = { workspace = true }
description = "User data management library for OAuth2 applications"
license = "MIT"

[dependencies]
chrono = { workspace = true }
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "json", "uuid"] }
thiserror = { workspace = true }
uuid = { version = "1.15", features = ["v4"] }

libstorage = { workspace = true }
