[package]
name = "libuserdb"
version = { workspace = true }
edition = { workspace = true }
description = "User data management library for OAuth2 applications"
license = "MIT"

[dependencies]
chrono = { workspace = true }
redis = { version = "0.29.1", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace =true }

libstorage = { workspace = true }
