[package]
name = "oauth2-passkey"
version = { workspace = true }
edition = { workspace = true }
description = "OAuth2 and Passkey authentication library for Rust web applications"
license = "MIT OR Apache-2.0"
authors = ["Kimitoshi Takahashi <ktaka@ccmp.jp>"]
repository = "https://github.com/ktaka-ccmp/oauth2-passkey"
homepage = "https://github.com/ktaka-ccmp/oauth2-passkey"
documentation = "https://docs.rs/oauth2-passkey"
keywords = ["oauth2", "passkey", "webauthn", "authentication", "security"]
categories = ["authentication", "web-programming", "cryptography"]
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
chrono.workspace = true
headers.workspace = true
http.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = { version = "0.10.9", default-features = false }
base64 = { version = "0.22.1", default-features = false }

ciborium = { version = "0.2.2", default-features = false }
oid-registry = { version = "0.8.1", default-features = false }
redis = { version = "0.32.2", default-features = false }
ring = { version = "0.17.14", default-features = false }
webpki = "0.22.4"
x509-parser = "0.17.0"
jsonwebtoken = { version = "9.3.1", default-features = false }
reqwest = { version = "0.12.20", default-features = false }
url = { version = "2.5.4", default-features = false }
subtle = { version = "2.6", default-features = false }

[dev-dependencies]
serial_test = { version = "3.2.0", features = ["async"], default-features = false }
proptest = { version = "1.7.0", features = ["std"], default-features = false }

# Cargo-release configuration for oauth2-passkey
[package.metadata.release]
publish = true
tag = true
sign-tag = false
sign-commit = false
push = false  # Push manually after verification
