[package]
name = "oauth2-passkey"
version = { workspace = true }
edition = { workspace = true }
description = "OAuth2 and Passkey authentication library for Rust web applications"
license = "MIT OR Apache-2.0"
authors = ["Kimitoshi Takahashi <ktaka@ccmp.jp>"]
repository = "https://github.com/ktaka-ccmp/oauth2-passkey"
homepage = "https://github.com/ktaka-ccmp/oauth2-passkey"
documentation = "https://docs.rs/oauth2-passkey"
keywords = ["oauth2", "passkey", "webauthn", "authentication", "security"]
categories = ["authentication", "web-programming", "cryptography"]
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
chrono.workspace = true
headers.workspace = true
http.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"

ciborium = { version = "0.2.2", features = ["std"] }
oid-registry = "0.8.1"
redis = { version = "0.32.3", features = ["tokio-comp"] }
ring = { version = "0.17.14", features = ["std"] }
webpki = { version = "0.22.4", features = ["std"] }
x509-parser = { version = "0.17.0", features = ["validate", "verify"] }
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
url = "2.5.4"
subtle = "2.6"

[dev-dependencies]
serial_test = "3.2.0"
proptest = "1.7.0"
