[package]
name = "oauth2-passkey"
version = { workspace = true }
edition = { workspace = true }
description = "OAuth2 and Passkey authentication library for Rust web applications"
license = "MIT OR Apache-2.0"
authors = ["Kimitoshi Takahashi <ktaka@ccmp.jp>"]
repository = "https://github.com/ktaka-ccmp/oauth2-passkey"
homepage = "https://github.com/ktaka-ccmp/oauth2-passkey"
documentation = "https://docs.rs/oauth2-passkey"
keywords = ["oauth2", "passkey", "webauthn", "authentication", "security"]
categories = ["authentication", "web-programming", "cryptography"]
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ciborium = { workspace = true }
dotenvy = { workspace = true }
headers = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
oid-registry = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
webpki = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
proptest = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true } 
base64 = { workspace = true }
chrono = { workspace = true }
oauth2-passkey-axum = { path = "../oauth2_passkey_axum" }
