[package]
name = "oauth2-passkey-axum"
version = { workspace = true }
edition = { workspace = true }
description = "Axum integration for oauth2-passkey authentication library"
license = "MIT OR Apache-2.0"
authors = ["Kimitoshi Takahashi <ktaka@ccmp.jp>"]
repository = "https://github.com/ktaka/oauth2-passkey"
homepage = "https://github.com/ktaka/oauth2-passkey"
documentation = "https://docs.rs/oauth2-passkey-axum"
keywords = ["oauth2", "passkey", "axum", "authentication", "web"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[features]
default = ["admin-ui", "user-ui"]
admin-ui = []
user-ui = []

[dependencies]
askama = { version = "0.13.0" }
http = { workspace = true }
tracing = { workspace = true }

# Note: Change to "oauth2-passkey = '0.1.0'" when publishing
oauth2-passkey = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }

futures = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
subtle = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
dotenv = "0.15.0"
