[package]
name = "oauth2-passkey-axum"
version = { workspace = true }
edition = { workspace = true }
description = "Axum integration for oauth2-passkey authentication library"
license = "MIT OR Apache-2.0"
authors = ["Kimitoshi Takahashi <ktaka@ccmp.jp>"]
repository = "https://github.com/ktaka-ccmp/oauth2-passkey"
homepage = "https://github.com/ktaka-ccmp/oauth2-passkey"
documentation = "https://docs.rs/oauth2-passkey-axum"
keywords = ["oauth2", "passkey", "axum", "authentication", "web"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[features]
default = ["admin-ui", "user-ui"]
admin-ui = []
user-ui = []

[dependencies]
askama = { version = "0.14.0" }
http = { workspace = true }
tracing = { workspace = true }

# Changed from workspace dependency to published crate version
oauth2-passkey = "0.1.2"

axum = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
subtle = "2.6"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
dotenvy = "0.15.7"
