[package]
name = "oauth2-passkey-axum"
version = { workspace = true }
edition = { workspace = true }
description = "Axum integration for oauth2-passkey authentication library"
license = "MIT OR Apache-2.0"
authors = ["Kimitoshi Takahashi <ktaka@ccmp.jp>"]
repository = "https://github.com/ktaka-ccmp/oauth2-passkey"
homepage = "https://github.com/ktaka-ccmp/oauth2-passkey"
documentation = "https://docs.rs/oauth2-passkey-axum"
keywords = ["oauth2", "passkey", "axum", "authentication", "web"]
categories = ["authentication", "web-programming"]
readme = "README.md"

[features]
default = ["admin-ui", "user-ui"]
admin-ui = []
user-ui = []

[dependencies]
# Changed from workspace dependency to published crate version
oauth2-passkey = { path = "../oauth2_passkey" }
#oauth2-passkey = { version = "0.1.x" }

askama = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
# Integration test dependencies
tower = { workspace = true }
tower-service = { workspace = true }
hyper = { workspace = true }
httpmock = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
